--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.url=jdbc:mysql://localhost:3306/springnew?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.jpa.database=mysql
+
+# by default /graphiql
+graphiql.mapping = /app-ui
+
+# by default /graphql
+graphql.servlet.mapping = /student-service
